--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mehdi-exo-library-js",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An exercice to learn how to create a library js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/YesIDo49/exo-library-js/issues"
   },
-  "homepage": "https://github.com/YesIDo49/exo-library-js#readme"
+  "homepage": "https://github.com/YesIDo49/exo-library-js#readme",
+  "devDependencies": {
+    "eslint": "^8.44.0",
+    "jest": "^29.6.1"
+  }
 }
